skapat js för hämta lista

--- a/list.html
+++ b/list.html
@@ -9,6 +9,7 @@
     <p>Du är inloggad och kan se skyddat innehåll.</p>
     <button id="logoutButton">Logga ut</button>
     <div id="userData"></div>
+    <script src="fetchUsers.js"></script>
     <script src="protected.js"></script>
 </body>
 </html>
