--- a/register.html
+++ b/register.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrera</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Registrera ny användare</h1>
+        <h1>Ny användare</h1>
     </header>
     <div id="formStyle">
         <form id="registerForm">
@@ -17,7 +21,7 @@
             <label for="password">Lösenord:</label><br>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Registrera</button>
+            <button id="createbutton" type="submit">Registrera</button>
         </form>
     </div>
     <div id="formFeedback"></div>
