--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logga in</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,7 +21,7 @@
             <label for="password">Lösenord:</label><br>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Logga in</button>
+            <button id="loginbutton" type="submit">Logga in</button>
         </form>
         <br>
         <a href="register.html">Registrera ny användare</a>
