--- a/list.html
+++ b/list.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Skyddad Sida</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
     <h1>Skyddad Sida</h1>
+</header>
+<div id="formStyle">
     <p>Du är inloggad och kan se skyddat innehåll.</p>
     <button id="logoutButton">Logga ut</button>
-    <div id="userData"></div>
+    <h2>Lista över medlemmar</h2>
+    <ul id="usersList"></ul>
+</div>
     <script src="fetchUsers.js"></script>
     <script src="protected.js"></script>
 </body>
