Fixat med styling och lagt till readme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br>
         <a href="register.html">Registrera ny användare</a>
     </div>
-    <div id="formFeedback"></div>
+    <div id="Feedback"></div>
     <script src="app.js"></script>
 </body>
 </html>
