--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
             <button id="createbutton" type="submit">Registrera</button>
         </form>
     </div>
-    <div id="formFeedback"></div>
+    <div id="Feedback"></div>
     <script src="app.js"></script>
 </body>
 </html>
