--- a/list.html
+++ b/list.html
@@ -18,6 +18,7 @@
     <h2>Lista över medlemmar</h2>
     <ul id="usersList"></ul>
 </div>
+<div id="Feedback"></div>
     <script src="fetchUsers.js"></script>
     <script src="protected.js"></script>
 </body>
